0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nihar-world
  labels:
    monitoring: prometheus
    istio-injection: enabled
