1-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app-v1
  namespace: nihar-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
      version: v1
  template:
    metadata:
      labels:
        app: first-app
        version: v1
        istio: monitor
    spec:
      containers:
      - image: aputra/myapp-lesson155:latest
        imagePullPolicy: Always
        name: first-app
        ports:
        - name: http
          containerPort: 8080
