5-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: first-app
  namespace: nihar-world
spec:
  hosts:
  - first-app
  http:
  - route:
    - destination:
        host: first-app
        subset: v1
      weight: 0
    - destination:
        host: first-app
        subset: v2
      weight: 100
